(refactoring) move text from member/details to locale
And remove sign-up-wizard class to improve view and text size

--- a/app/views/member/details/edit.html.haml
+++ b/app/views/member/details/edit.html.haml
@@ -1,11 +1,10 @@
 %section#banner
   .row
     .medium-12.columns
-      %h1 Almost there...
-      %p
-        We need some more details from you to finish creating your account. We use these to help run our events.
+      %h1= t('member.details.edit.title')
+      %p= t('member.details.edit.summary')
 
-  = simple_form_for @member, url: member_details_path, method: :put,  html: {class: "sign-up-wizard"} do |f|
+  = simple_form_for @member, url: member_details_path, method: :put do |f|
     .row
       .large-6.large-offset-3.columns
         = f.input :name, required: true
@@ -23,9 +22,9 @@
     .row
       .large-6.large-offset-3.columns
         - if @member.coach?
-          = f.input :about_you, as: :text, label: "What experience do you have? What languages do you like to use? Tell us a little about yourself!", required: true
+          = f.input :about_you, as: :text, label: t('member.details.edit.coach.about_you'), required: true
         - else
-          = f.input :about_you, as: :text, label: "What do you want to work on at codebar? What have you done in the past? Tell us a little about yourself!", required: true
+          = f.input :about_you, as: :text, label: t('member.details.edit.student.about_you'), required: true
 
     .row
       .large-6.large-offset-3.columns
@@ -34,4 +33,4 @@
     .row
       .large-6.large-offset-3.columns.text-right
         = hidden_field_tag :next_page, step2_member_path(member_type: @type)
-        = f.submit "Next", class: 'button round right'
+        = f.submit t('member.details.edit.submit'), class: 'button round right'
