--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -1,3 +1,5 @@
+- title t('workshop.invitation.title', date: humanize_date(@workshop.date_and_time))
+
 .stripe.reverse
   .row
     .large-12.columns
