(feature) add page title to job pages

--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -1,3 +1,5 @@
+- title "#{@job.title} | #{t('jobs.title')}"
+
 =render partial: 'jobs/show', locals: { admin: false }
 %script.jobref{type: 'application/ld+json'}
   = raw(render partial: 'job.json.jbuilder', locals: { job: @job })
