(feature) add page title to workshop page

--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -1,3 +1,5 @@
+- title t('workshop.title', host: @workshop.host.name, date: humanize_date(@workshop.date_and_time))
+
 = render partial: 'meta_tags', locals: { workshop: @workshop }
 
 .stripe.reverse
