(feature) add page title to meetings page

--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,3 +1,5 @@
+- title t('meeting.title', name: @meeting.name, date: humanize_date(@meeting.date_and_time))
+
 %section.stripe.reverse
   .row
     .medium-6.columns
