Localise admin/members_controller

--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -47,7 +47,7 @@
           %label.label.warning Banned
         - if @member.groups.any?
           %h3 Subscriptions
-          %ul.no-bullet
+          %ul.no-bullet#subscriptions
             - @member.groups.each do |group|
               %li
                 = link_to [:admin, group] do
