--- a/app/views/admin/workshops/_form.html.haml
+++ b/app/views/admin/workshops/_form.html.haml
@@ -2,6 +2,11 @@
   .row
     .medium-6.columns
       = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
+
+  .row
+    .medium-6.columns
+      = f.input :virtual, as: :boolean
+
   .row
     .medium-6.columns.admin_margin
       = f.input :local_date, label: "Date", as: :string, required: true, input_html: { data: { value: @workshop.date_and_time.try(:strftime, '%d/%m/%Y') } }
@@ -11,11 +16,11 @@
     .large-3.columns
       = f.input :ends_at, as: :string, required: true, input_html: { data: { value: @workshop.ends_at.try(:strftime, '%H:%M') } }
   .row
-    .medium-6.columns
-      = f.input :host, as: :select, required: true, collection: Sponsor.all, include_blank: true, selected: (@workshop.host.id rescue '')
+    .medium-6.columns#host
+      = f.input :host, as: :select, collection: Sponsor.all, include_blank: true, selected: (@workshop.host.id rescue '')
   .row
     .medium-6.columns.admin_margin
-      = f.association :sponsors, required: true
+      = f.association :sponsors
   %br
   .row
     .large-6.columns
