(refactoring) rename workshop_actions and extract to locale Extend tests to verify sponsors and organisers

--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -24,7 +24,7 @@
           = sanitize(@workshop.description)
 
         - unless current_user and current_user.banned?
-          = render 'workshop_actions'
+          = render 'actions'
 
 .stripe.reverse
   .row
