--- a/app/views/workshops/_actions.html.haml
+++ b/app/views/workshops/_actions.html.haml
@@ -2,17 +2,16 @@
   %p
     %label.label.info= t('workshops.not_open_for_rsvp')
 - else
-  - if @workshop.past?
-    - unless logged_in?
-      %p Sign up to be invited to future events.
+  - if @workshop.past? and !logged_in?
+    %p= t('workshops.sign_up_to_be_invited')
   - else
     - if logged_in?
-      - if @workshop.attendee? current_user
-        %p You are attending this event.
-      - elsif @workshop.waitlisted? current_user
-        %p You are on the waiting List.
-      - elsif !@workshop.spaces?
-        %p Unfortunately this workshop is full, but do join the waiting list as spots open up in the lead up to the workshop.
+      - if @workshop.attendee?(current_user)
+        %p= t('workshops.already_attending')
+      - elsif @workshop.waitlisted?(current_user)
+        %p=t('workshops.on_waiting_list')
+      - elsif(!@workshop.spaces?)
+        %p= t('workshops.no_spaces_available')
 
 - if logged_in? && @workshop.future? && (@workshop.invitable || @workshop.open_for_rsvp?)
   - if @workshop.attendee?(current_user)
