--- a/app/views/admin/workshops/_form.html.haml
+++ b/app/views/admin/workshops/_form.html.haml
@@ -1,45 +1,51 @@
 = simple_form_for [:admin, @workshop], url: :admin_workshops do |f|
   .row
     .medium-6.columns
-      = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
+      .row
+        .medium-12.columns
+          = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
 
-  .row
+      .row
+        .medium-12.columns.admin_margin
+          = f.input :local_date, label: "Date", as: :string, required: true, input_html: { data: { value: @workshop.date_and_time.try(:strftime, '%d/%m/%Y') } }
+      .row
+        .large-6.columns
+          = f.input :local_time, label: "Begins at", as: :string, required: true, input_html: { data: { value: @workshop.time.try(:strftime, '%H:%M') } }
+        .large-6.columns
+          = f.input :ends_at, as: :string, required: true, input_html: { data: { value: @workshop.ends_at.try(:strftime, '%H:%M') } }
+      .row
+        .medium-12.columns#host
+          = f.input :host, as: :select, collection: Sponsor.all, include_blank: true, selected: (@workshop.host.id rescue '')
+      .row
+        .medium-12.columns.admin_margin
+          = f.association :sponsors
+      %br
+      .row
+        .large-12.columns
+          %h6 Default description text:
+          %p
+            %small= t("workshops.lead")
+      .row
+        .large-12.columns
+          = f.input :description, as: :text
+      %br
+      .row
+        .large-12.columns
+          .panel.callout
+            %p Fill out these fields if you want RSVPs to open automatically at a future time. Leave blank if you'll handle it manually later.
+            = f.input :rsvp_open_local_date, as: :string, input_html: { data: { value: @workshop.rsvp_opens_at.try(:strftime, '%d/%m/%Y') } }
+            = f.input :rsvp_open_local_time, as: :string, input_html: { data: { value: @workshop.rsvp_opens_at.try(:time).try(:strftime, '%H:%M') } }
     .medium-6.columns
-      = f.input :virtual, as: :boolean
-
+      %br
+      .row
+        .large-12.columns
+          .panel.callout
+            %p= t('admin.workshop.form.virtual_info')
+            = f.input :virtual, as: :boolean, label: 'Virtual workshop'
+            = f.input :slack_channel
+            = f.input :slack_channel_link
   .row
-    .medium-6.columns.admin_margin
-      = f.input :local_date, label: "Date", as: :string, required: true, input_html: { data: { value: @workshop.date_and_time.try(:strftime, '%d/%m/%Y') } }
-  .row
-    .large-3.columns
-      = f.input :local_time, label: "Begins at", as: :string, required: true, input_html: { data: { value: @workshop.time.try(:strftime, '%H:%M') } }
-    .large-3.columns
-      = f.input :ends_at, as: :string, required: true, input_html: { data: { value: @workshop.ends_at.try(:strftime, '%H:%M') } }
-  .row
-    .medium-6.columns#host
-      = f.input :host, as: :select, collection: Sponsor.all, include_blank: true, selected: (@workshop.host.id rescue '')
-  .row
-    .medium-6.columns.admin_margin
-      = f.association :sponsors
-  %br
-  .row
-    .large-6.columns
-      %h6 Default description text:
-      %p
-        %small= t("workshops.lead")
-  .row
-    .large-6.columns
-      = f.input :description, as: :text, label: 'Additional description (supports HTML)',
-      placeholder: 'Use this space to write a description of the workshop.'
-  %br
-  .row
-    .large-6.columns
-      .panel.callout
-        %p Fill out these fields if you want RSVPs to open automatically at a future time. Leave blank if you'll handle it manually later.
-        = f.input :rsvp_open_local_date, as: :string, input_html: { data: { value: @workshop.rsvp_opens_at.try(:strftime, '%d/%m/%Y') } }
-        = f.input :rsvp_open_local_time, as: :string, input_html: { data: { value: @workshop.rsvp_opens_at.try(:time).try(:strftime, '%H:%M') } }
-  .row
-    .large-6.columns
+    .large-12.columns
       = f.input :invitable
   .row
     .large-12.columns.text-right
