(feature) enable admin to set coach and student_spaces for virtual workshops
- add coach_spaces and student_spaces in presenters,
- remove attending_and_available_x_spots from virtual_workshop_presenter as it can now be handled entirely by workshop_presenter
- extract text to locale
- use workshop `to_s` to print name (Workshop or Virtual Workshop)
- use WorkshopPresenter `address` method in views, no need to setup address
separately in controllers

--- a/app/views/admin/workshops/_invitation_management.html.haml
+++ b/app/views/admin/workshops/_invitation_management.html.haml
@@ -25,7 +25,7 @@
     .medium-6.columns
       %h4
         Students
-        %label.label.round.secondary #{@attending_students.count}#{(" of " + @workshop.host.seats.to_s) if @workshop.has_host?}
+        %label.label.round.secondary #{@attending_students.count} of #{@workshop.student_spaces}
         %label.label.round.signed-in #{ @attending_students.count(&:attended) }
       = render partial: 'admin/workshop/attendances', locals: { invitations: @attending_students }
       = render partial: 'admin/workshop/waiting_list', locals: { waiting_list: @student_waiting_list }
@@ -33,7 +33,7 @@
       .row
         %h4
           Coaches
-          %label.label.round.secondary #{@attending_coaches.count}#{(" of " + @workshop.host.coach_spots.to_s) if @workshop.has_host?}
+          %label.label.round.secondary #{@attending_coaches.count} of #{@workshop.coach_spaces}
           %label.label.round.signed-in #{ @attending_coaches.count(&:attended) }
       = render partial: 'admin/workshop/attendances', locals: { invitations: @attending_coaches }
       = render partial: 'admin/workshop/waiting_list', locals: { waiting_list: @coach_waiting_list }
