--- a/app/views/admin/workshops/_virtual_workshop_fields.html.haml
+++ b/app/views/admin/workshops/_virtual_workshop_fields.html.haml
@@ -5,3 +5,5 @@
       = f.input :virtual, as: :boolean
       = f.input :slack_channel
       = f.input :slack_channel_link
+      = f.input :coach_spaces
+      = f.input :student_spaces
