--- a/app/views/admin/workshops/send_invites.html.haml
+++ b/app/views/admin/workshops/send_invites.html.haml
@@ -7,9 +7,10 @@
           = link_to [:admin, @workshop.chapter] do
             %small=@workshop.chapter.name
     .row
-      .medium-3.columns
-        %h5
-          = @workshop.venue.name
+      - unless @workshop.virtual?
+        .medium-3.columns
+          %h5
+            = @workshop.venue.name
       .medium-3.columns
         %h5
           #{l(@workshop.date_and_time)}
