--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -79,9 +79,16 @@
           = @workshop.description
       - if @workshop.virtual? &&  @invitation.attending.eql?(true)
         %h4= t('workshop.virtual.invitation.info.title')
-        %ol
-          %li= t('workshop.virtual.invitation.info.line_1_html', slack_link: link_to(t('social_media_links.slack_html')))
-          %li= t('workshop.virtual.invitation.info.line_2_html', channel: link_to('workshop channel', 'link' ))
+        #join-info
+          %ol
+            %li= t('workshop.virtual.invitation.info.line_1_html', slack_link: link_to(t('social_media_links.slack_html')))
+            %li= t('workshop.virtual.invitation.info.line_2_html', channel: link_to("##{@workshop.slack_channel}", @workshop.slack_channel_link))
+            %li= t('workshop.virtual.invitation.info.line_3_html', discord: link_to("discord", t('social_media_links.discord_invitation')))
+
+          %h5= t('workshop.virtual.invitation.info.begins_title')
+          %ol
+            %li= t('workshop.virtual.invitation.info.line_4')
+            %li= t('workshop.virtual.invitation.info.line_5')
 
   - unless @workshop.virtual?
     .row
