Date format to _humanize_date: Invitation#show
humanize_date([date], with_time: false, with_year: false) =>
  I18n.l([date], format: humanize_date)

--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -1,4 +1,4 @@
-- title t('workshop.invitation.title', date: humanize_date(@workshop.date_and_time))
+- title t('workshop.invitation.title', date: l(@workshop.date_and_time, format: :_humanize_date))
 
 .stripe.reverse
   .row
