Date format to _humanize_date: Meeting#show
humanize_date([date], with_time: false, with_year: false) =>
  I18n.l([date], format: humanize_date)

--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,4 +1,4 @@
-- title t('meeting.title', name: @meeting.name, date: humanize_date(@meeting.date_and_time))
+- title t('meeting.title', name: @meeting.name, date: l(@meeting.date_and_time, format: :_humanize_date))
 
 %section.stripe.reverse
   .row
