--- a/app/views/virtual_workshops/show.html.haml
+++ b/app/views/virtual_workshops/show.html.haml
@@ -1,4 +1,5 @@
-- title t('workshop.virtual.title', chapter: @workshop.chapter.name, date: humanize_date(@workshop.date_and_time))
+- title t('workshop.virtual.title', chapter: @workshop.chapter.name,
+                                    date: l(@workshop.date_and_time, format: :_humanize_date))
 
 = render partial: 'virtual_workshops/meta_tags', locals: { workshop: @workshop }
 
@@ -8,7 +9,7 @@
       %h2
         = t('workshops.virtual.title', chapter: @workshop.chapter.name)
         %br
-        %small #{humanize_date(@workshop.date_and_time)} #{@workshop.distance_of_time}
+        %small #{l(@workshop.date_and_time, format: :_humanize_date)} #{@workshop.distance_of_time}
         #workshop-time.time
           %i.material-icons
             access_time
