Date format to _humanize_date_with_time: in view body text
 - testing runs on page so if formatting breaks the page at least
   one test fails
 - Specific tests were not added for the displayed dates

humanize_date([date], with_time: true, with_year: false) =>
  I18n.l([date], format: humanize_date_with_time)

--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -6,7 +6,7 @@
       %h2
         = @workshop.title
         %br
-        %small #{humanize_date(@workshop.date_and_time, with_time: true)} #{@workshop.distance_of_time}
+        %small #{l(@workshop.date_and_time, format: :_humanize_date_with_time)} #{@workshop.distance_of_time}
       - if @workshop.date_and_time.past?
         %label.label.warning= t('workshops.already_taken_place')
 .alert-box.info
