--- a/app/views/virtual_workshops/_meta_tags.html.haml
+++ b/app/views/virtual_workshops/_meta_tags.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta_tags do
   - title = t('workshops.virtual.title', chapter: workshop.chapter.name)
-  - twitter_description = "codebar #{workshop.chapter.name} virtual  workshop on #{humanize_date(workshop.date_and_time, with_time: true)}"
+  - twitter_description = "codebar #{workshop.chapter.name} virtual  workshop on #{l(workshop.date_and_time, format: :_humanize_date_with_time)}"
   - slack_description = "codebar #{workshop.chapter.name} virtual workshop"
   %meta{ property: 'twitter:card', content: 'summary' }
   %meta{ property: 'twitter:image', content: 'https://codebar.io/images/twitter-summary-card-image.png' }
@@ -14,4 +14,4 @@
   %meta{ name: 'twitter:label1', value: "Where"}
   %meta{ name: 'twitter:data1', value: "online" }
   %meta{ name: 'twitter:label2', value: "When"}
-  %meta{ name: 'twitter:data2', value: "#{humanize_date(workshop.date_and_time, with_time: true)}" }
+  %meta{ name: 'twitter:data2', value: "#{l(workshop.date_and_time, format: :_humanize_date_with_time)}" }
