--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -6,7 +6,7 @@
       %h2
         =@meeting.name
       %h3
-        %small=humanize_date(@meeting.date_and_time, with_time: true)
+        %small=l(@meeting.date_and_time, format: :_humanize_date_with_time)
 
   .row
     .medium-4.columns
