--- a/app/views/virtual_workshop_invitation_mailer/invite_coach.html.haml
+++ b/app/views/virtual_workshop_invitation_mailer/invite_coach.html.haml
@@ -14,7 +14,7 @@
               %td
                 %h3 Hi #{@member.name},
                 %p.lead
-                  Invites for our next virtual workshop are now open and we are looking for coaches. The workshop will take place on #{l(@workshop.date_and_time, format: :_humanize_date_with_time)}.
+                  Invites for our next virtual workshop are now open and we are looking for coaches. The workshop will take place on #{l(@workshop.date_and_time, format: :humanize_date_with_time)}.
 
                 %p At the workshop you will be helping students remotely as they work their way through one of our tutorials or a personal project they need help on. Don't worry we'll only match you with someone who you'll be able to help.
 
