--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -4,7 +4,7 @@
       %h2
         = @course.title
         %br
-        %small #{l(@course.date_and_time, format: :_humanize_date_with_time)}
+        %small #{l(@course.date_and_time, format: :humanize_date_with_time)}
       - if @course.date_and_time.past?
         %label.label.warning This event has already taken place.
 
@@ -52,7 +52,7 @@
           = @host_address.to_html
         %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
         = link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-    
+
     .large-4.columns
       %h4 Sponsors
       %ul.no-bullet
