--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -1,4 +1,4 @@
-- title t('workshop.invitation.title', date: l(@workshop.date_and_time, format: :_humanize_date))
+- title t('workshop.invitation.title', date: l(@workshop.date_and_time, format: :humanize_date))
 
 .stripe.reverse
   .row
@@ -6,7 +6,7 @@
       %h2
         = @workshop.title
         %br
-        %small #{l(@workshop.date_and_time, format: :_humanize_date_with_time)} #{@workshop.distance_of_time}
+        %small #{l(@workshop.date_and_time, format: :humanize_date_with_time)} #{@workshop.distance_of_time}
       - if @workshop.date_and_time.past?
         %label.label.warning= t('workshops.already_taken_place')
 .alert-box.info
