--- a/app/views/virtual_workshops/show.html.haml
+++ b/app/views/virtual_workshops/show.html.haml
@@ -1,5 +1,5 @@
 - title t('workshop.virtual.title', chapter: @workshop.chapter.name,
-                                    date: l(@workshop.date_and_time, format: :_humanize_date))
+                                    date: l(@workshop.date_and_time, format: :humanize_date))
 
 = render partial: 'virtual_workshops/meta_tags', locals: { workshop: @workshop }
 
@@ -9,7 +9,7 @@
       %h2
         = t('workshops.virtual.title', chapter: @workshop.chapter.name)
         %br
-        %small #{l(@workshop.date_and_time, format: :_humanize_date)} #{@workshop.distance_of_time}
+        %small #{l(@workshop.date_and_time, format: :humanize_date)} #{@workshop.distance_of_time}
         #workshop-time.time
           %i.material-icons
             access_time
