--- a/app/views/admin/workshops/show.html.haml
+++ b/app/views/admin/workshops/show.html.haml
@@ -32,6 +32,9 @@
   = link_to admin_workshop_attendees_emails_path(@workshop, format: 'text'), title: 'Attendee emails', class: 'item' do
     %i.fa.fa-at
     %label Emails
+  = link_to admin_workshop_cancelling_path(@workshop), method: :post, title: 'Cancel Workshop', class: 'item' do
+    %i.fa.fa-exclamation-triangle
+    %label Cancel
   = link_to admin_workshop_path(@workshop), method: :delete, data: { confirm: 'Are you sure you want to delete this workshop?' }, title: 'Destroy workshop', class: 'item' do
     %i.fa.fa-remove
     %label Destroy
@@ -39,6 +42,10 @@
 
 %section
   .stripe.reverse
+    - if @workshop.cancelled?
+      .row
+        .medium-12.columns
+          %label.label.warning= t('messages.event_cancelled')
     .row
       .medium-12.columns
         %h2
