Include the error image on instead of hotlinking
Right now we are serving up the image from GitHub instead just serving
it from our own of server.

This change includes the `codebar-girl.gif` image in the project and
links to it on the error and not found pages.

--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -53,7 +53,7 @@
   %body
     #main
       =link_to root_path do
-        =image_tag 'https://github.com/codebar/static_pages/blob/master/assets/img/codebar-girl.gif?raw=true', height: '200px', id: 'animated-logo'
+        =image_tag 'codebar-girl.gif', height: '200px', id: 'animated-logo'
       #message
         %h1 Page not found
         %h2 If you entered a web address please check it was correct.
