Replace mb1 with margin-bottom-4
100px is roughly equal to 4em in the current font size so I think we can
make this change without disrupting the look of the site.

--- a/app/views/pages/cookie-policy.html.haml
+++ b/app/views/pages/cookie-policy.html.haml
@@ -47,4 +47,4 @@
       | ---- | ------- |    ----- |
       | `_cfduid` | #{t('pages.cookies.cloudflare.cfduid')} | #{t('pages.cookies.cloudflare.cfduid_expiry')} |
 
-      <div class='mb1' >&nbsp;</div>
+      <div class='margin-bottom-4'>&nbsp;</div>
