--- a/app/views/pages/privacy-policy.html.haml
+++ b/app/views/pages/privacy-policy.html.haml
@@ -38,4 +38,4 @@
       #{t('pages.privacy_policy.contact.text')}
 
 
-      <div class='mb1' >&nbsp;</div>
+      <div class='margin-bottom-4'>&nbsp;</div>
