Revert back to previous utility class naming scheme

--- a/app/views/member/jobs/index.html.haml
+++ b/app/views/member/jobs/index.html.haml
@@ -27,6 +27,6 @@
         .medium-6.columns.text-right
           = will_paginate(@jobs)
 
-    .row.margin-top-2
+    .row.mt2
       .large-12.columns
         =link_to('New job', new_member_job_path, class: 'button medium ')
