--- a/app/views/pages/privacy-policy.html.haml
+++ b/app/views/pages/privacy-policy.html.haml
@@ -1,4 +1,4 @@
-.row.margin-top-2
+.row.mt2
   .large-12.columns
     :markdown
 
@@ -38,4 +38,4 @@
       #{t('pages.privacy_policy.contact.text')}
 
 
-      <div class='margin-bottom-4'>&nbsp;</div>
+      <div class='mb4'>&nbsp;</div>
