--- a/app/assets/stylesheets/partials/_margins.scss
+++ b/app/assets/stylesheets/partials/_margins.scss
@@ -1,18 +1,18 @@
 /* Margin utility classes */
 @for $i from 0 through 5 {
-  .margin-top-#{$i} {
+  .mt#{$i} {
     margin-top: #{$i}em;
   }
 
-  .margin-bottom-#{$i} {
+  .mb#{$i} {
     margin-bottom: #{$i}em;
   }
 
-  .margin-right-#{$i} {
+  .mr#{$i} {
     margin-right: #{$i}em;
   }
 
-  .margin-left-#{$i} {
+  .ml#{$i} {
     margin-left: #{$i}em;
   }
 }
