--- a/app/views/pages/cookie-policy.html.haml
+++ b/app/views/pages/cookie-policy.html.haml
@@ -1,4 +1,4 @@
-.row.margin-top-2
+.row.mt2
   .large-12.columns
     :markdown
 
@@ -47,4 +47,4 @@
       | ---- | ------- |    ----- |
       | `_cfduid` | #{t('pages.cookies.cloudflare.cfduid')} | #{t('pages.cookies.cloudflare.cfduid_expiry')} |
 
-      <div class='margin-bottom-4'>&nbsp;</div>
+      <div class='mb4'>&nbsp;</div>
