Add a normal margin utility class

--- a/app/assets/stylesheets/partials/_margins.scss
+++ b/app/assets/stylesheets/partials/_margins.scss
@@ -1,5 +1,9 @@
 /* Margin utility classes */
 @for $i from 0 through 5 {
+  .m#{$i} {
+    margin: #{$i}em;
+  }
+
   .mt#{$i} {
     margin-top: #{$i}em;
   }
