--- a/app/views/admin/meetings/_form.html.haml
+++ b/app/views/admin/meetings/_form.html.haml
@@ -8,10 +8,10 @@
           = f.input :slug
   .row
     .medium-6.columns.admin_margin
-      = f.input :local_date, as: :string, required: true, input_html: { data: { value: @meeting.date_and_time.try(:strftime, '%d/%m/%Y') } }
+      = f.input :local_date, as: :string, required: true, input_html: { data: { value: @meeting.date_and_time&.strftime('%d/%m/%Y') } }
   .row
     .medium-6.columns
-      = f.input :local_time, as: :string, required: true, input_html: { data: { value: @meeting.time.try(:strftime, '%H:%M') } }
+      = f.input :local_time, as: :string, required: true, input_html: { data: { value: @meeting.time&.strftime('%H:%M') } }
   .row
     .large-12.columns.admin_margin
       = f.input :description, placeholder: 'Supports HTML', as: :text, input_html: { style: 'height: 300px;' }
