Adds How to support us section to homepage featuring donation platforms we are on

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,7 @@
 @import 'partials/links';
 @import 'partials/margins';
 @import 'partials/layout';
+@import 'partials/card';
 @import 'partials/hero';
 @import 'partials/events';
 @import 'partials/social_media';
