--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -26,7 +26,7 @@
         %li= link_to t("navigation.sponsors"), sponsors_path
         %li= link_to t("navigation.events"), events_path
         %li= link_to t("navigation.jobs"), jobs_path
-        %li.active= link_to t("navigation.donate"), new_donation_path
+        %li.active= link_to t("navigation.donate"), "https://codebar.enthuse.com/donate/"
 
     .large-3.columns
       = render partial: 'shared/social_media'
