Moves How to support us section title to locales files

--- a/app/views/shared/_donation_platforms.html.haml
+++ b/app/views/shared/_donation_platforms.html.haml
@@ -1,6 +1,6 @@
 .row
   .columns.small-12
-    %h2 How to support us
+    %h2= t("donation_platforms.title")
 
 .row.flex-grid
   .columns.small-12.medium-6.large-3.flex-item
